--- a/src/components/CardsSection.css
+++ b/src/components/CardsSection.css
@@ -66,7 +66,7 @@
 }
 
 .card-desc {
-  font-size: 0.88rem;
+  font-size: 0.75rem;
   color: #555;
   line-height: 1.25;
 }
@@ -94,6 +94,10 @@
   }
 
   .card-desc {
-    font-size: 0.85rem;
-  }
+  color: #555;
+  font-size: 0.65rem;
+  margin-top: 0.4rem;
+  line-height: 1.4;
+}
+
 }
